# Projeto-Streamlit

./: Cadastro.py  Clientes.csv  README.md  pyproject.toml
pages/: Consulta.py
