[tool.poetry]
name = "projeto prático"
version = "0.1.0"
description = ""
authors = ["clear"]
license = "poetry init"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.39.0"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
